--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.1",
+    "json-bigint": "^1.0.0",
     "lodash": "^4.17.21",
     "vant": "^2.12.47",
     "vue": "^2.6.11",
